# linux-data-struct

./: CMakeLists.txt  README.md
list/: CMakeLists.txt  simple_list.c  simple_list.h
